# rigol-dho824-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  LICENSE  README.md  README_MCP.md  capture_waveforms.py  pyproject.toml  requirements.txt  server.json  shoulddosoon.md  test_mcp_tools.py  test_scale_effect.py  test_word_format.py
.github/workflows/: docker.yml  publish-to-pypi.yml
captured_waveforms/ch1/: data.csv  raw.json
captured_waveforms/ch12/: data.csv  raw.json
captured_waveforms/ch1234/: data.csv  raw.json
docs/: index.html
scripts/: convert_manual_threads.py  convert_png_to_gif.sh  convert_png_to_webp.sh  json_threads_to_markdown.py
src/rigol_dho824_mcp/: __init__.py  acquisition.py  channel.py  server.py  trigger.py  waveform.py
