[project]
name = "rigol-dho824-mcp"
version = "0.1.0"
description = "MCP server for Rigol DHO824 oscilloscope"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.2.0",
    "pyvisa>=1.13.0",
    "pyvisa-py>=0.7.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
rigol-dho824-mcp = "rigol_dho824_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rigol_dho824_mcp"]